<resources>
    <string name="app_name">FLUSS</string>
    
    <string name="remittance_title">송금</string>
    <string name="lookup_title">조회</string>
    <string name="timeline_title">타임라인</string>
    <string name="addcard_title">카드추가</string>
    <string name="setting_title">설정</string>

    <string name="id_text">아이디</string>
    <string name="password_text">비밀번호</string>
    <string name="check_password_text">비밀번호 확인</string>
    <string name="name_text">이름</string>
    <string name="ex_user_phone_number">전화번호 Ex) 010-XXXX-XXXX</string>
    <string name="ex_account_number">계좌번호 Ex) 352-XXXX-XXXX-XXXX</string>
    <string name="login_text">로그인</string>
    <string name="find_account_title_text">계정을 잊으셨나요?</string>
    <string name="find_id_text">아이디 찾기</string>
    <string name="find_password_text">비밀번호 찾기</string>
    <string name="no_id_text">계정이 없으신가요?</string>
    <string name="sign_up_text">회원가입</string>

    <string name="send_money_title">55원 송금</string>
    <string name="my_account_send_title">내 계좌로 송금하기</string>
    <string name="user_account_title">이유승님의 계좌 목록</string>
    <string name="account_count">2개의 계좌</string>
    <string name="chlrms_thdrmagks_ahrfhr">최근 송금한 목록</string>
    <string name="my_account_title">플럿머니</string>
    <string name="bank_name_title">NH농협은행계좌</string>
    <string name="user_phone_number">010-XXXX-XXXX</string>
    <string name="bank_account_number">352-XXXX-XXXX-XXXX</string>

    <string name="transfer_item_send_list">내 NH농협계좌   ></string>
    <string name="transfer_item_send_friend_name">이재민</string>
    <string name="f_market_text">F-Market</string>

    <string name="all_money_title_text">총 금액</string>
    <string name="category_text">카테고리</string>
    <string name="leftover_money">-71,000 원</string>
    <string name="deal_title">거래내역</string>

    <string name="main_send_button_text">송금</string>
    <string name="main_search_button_text">조회</string>
    <string name="main_timeline_button_text">타임라인</string>
    <string name="main_create_button_text">개설</string>
    <string name="main_setting_button_text">전체</string>
    <string name="main_dutch_button_text">더치페이</string>
    <string name="main_remittance_button_text">보내기</string>

    <string name="friend_name">이재민</string>
</resources>
