<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/background_color"
        tools:context=".view.activity.login.LoginActivity" >

        <ImageView
            android:id="@+id/logo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="170dp"
            android:layout_marginTop="100dp"
            android:layout_marginEnd="170dp"
            android:adjustViewBounds="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/flut_logo"
            tools:ignore="ContentDescription" />

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/materialCardView"
            android:layout_width="0dp"
            android:layout_height="420dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:elevation="15dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <LinearLayout
                    android:id="@+id/input_layout"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="36dp"
                    android:layout_marginTop="50dp"
                    android:layout_marginEnd="36dp"
                    android:orientation="vertical"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/input_layout_id"
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="5dp"
                        android:hint="@string/id_text"
                        app:boxBackgroundColor="@android:color/white">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/id_text"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:imeOptions="flagNoExtractUi|flagNoFullscreen|flagNoAccessoryAction"
                            android:inputType="textEmailAddress"
                            android:privateImeOptions="nm" />

                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/input_layout_pw"
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/password_text"
                        app:boxBackgroundColor="@android:color/white"
                        app:passwordToggleEnabled="true">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/pw_text"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:imeOptions="actionDone|flagNoExtractUi|flagNoFullscreen|flagNoAccessoryAction"
                            android:inputType="textPassword"
                            android:privateImeOptions="nm" />

                    </com.google.android.material.textfield.TextInputLayout>

                </LinearLayout>

                <TextView
                    android:id="@+id/login_button"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="50dp"
                    android:layout_marginTop="12dp"
                    android:layout_marginEnd="50dp"
                    android:layout_marginBottom="12dp"
                    android:background="@drawable/login_button_radius"
                    android:fontFamily="@font/nanum_squareeb"
                    android:gravity="center"
                    android:padding="15dp"
                    android:text="@string/login_text"
                    android:textColor="@color/white"
                    android:textSize="7pt"
                    app:layout_constraintBottom_toTopOf="@+id/textView48"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/input_layout" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/nanum_squareb"
                    android:text="@string/no_id_text"
                    android:gravity="center"
                    app:layout_constraintBottom_toBottomOf="@+id/sign_up_button"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="@+id/sign_up_button" />

                <TextView
                    android:id="@+id/sign_up_button"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="35dp"
                    android:layout_marginBottom="28dp"
                    android:fontFamily="@font/nanum_squareeb"
                    android:text="@string/sign_up_text"
                    android:textColor="@color/black"
                    android:textSize="7pt"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent" />

                <TextView
                    android:id="@+id/find_password_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="32dp"
                    android:text="@string/find_password_text"
                    android:fontFamily="@font/nanum_squareeb"
                    android:textColor="@color/black"
                    android:textSize="7pt"
                    app:layout_constraintBottom_toTopOf="@+id/sign_up_button"
                    app:layout_constraintEnd_toEndOf="@+id/sign_up_button" />

                <TextView
                    android:id="@+id/textView46"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="4dp"
                    android:fontFamily="@font/nanum_squareeb"
                    android:text="/"
                    android:textColor="@color/black"
                    android:textSize="7pt"
                    app:layout_constraintBottom_toBottomOf="@+id/find_password_button"
                    app:layout_constraintEnd_toStartOf="@+id/find_password_button"
                    app:layout_constraintTop_toTopOf="@+id/find_password_button"
                    tools:ignore="HardcodedText" />

                <TextView
                    android:id="@+id/find_id_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="4dp"
                    android:text="@string/find_id_text"
                    android:fontFamily="@font/nanum_squareeb"
                    android:textColor="@color/black"
                    android:textSize="7pt"
                    app:layout_constraintBottom_toBottomOf="@+id/textView46"
                    app:layout_constraintEnd_toStartOf="@+id/textView46"
                    app:layout_constraintTop_toTopOf="@+id/textView46" />

                <TextView
                    android:id="@+id/textView48"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="12dp"
                    android:text="@string/find_account_title_text"
                    app:layout_constraintBottom_toTopOf="@+id/find_id_button"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </com.google.android.material.card.MaterialCardView>

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>