<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_color"
    tools:context=".view.activity.singup.SignUpActivity">

    <ImageView
        android:id="@+id/logo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="170dp"
        android:layout_marginTop="36dp"
        android:layout_marginEnd="170dp"
        android:adjustViewBounds="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/flut_logo"
        tools:ignore="ContentDescription" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/login_container"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="36dp"
        android:layout_marginEnd="20dp"
        android:background="@drawable/background_login"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/logo">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/input_layout_id"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="42dp"
            android:layout_marginEnd="24dp"
            android:hint="@string/id_text"
            app:boxBackgroundColor="@android:color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/login_container">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/id_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:imeOptions="flagNoExtractUi|flagNoFullscreen|flagNoAccessoryAction"
                android:inputType="textEmailAddress"
                android:privateImeOptions="nm" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/input_layout_pw"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="12dp"
            android:layout_marginEnd="24dp"
            android:hint="@string/password_text"
            app:boxBackgroundColor="@android:color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/input_layout_id">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/pw_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:imeOptions="actionDone|flagNoExtractUi|flagNoFullscreen|flagNoAccessoryAction"
                android:inputType="textPassword"
                android:privateImeOptions="nm" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/input_layout_check_pw"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="12dp"
            android:layout_marginEnd="24dp"
            android:hint="@string/check_password_text"
            app:boxBackgroundColor="@android:color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/input_layout_pw">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/check_pw_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:imeOptions="actionDone|flagNoExtractUi|flagNoFullscreen|flagNoAccessoryAction"
                android:inputType="textPassword"
                android:privateImeOptions="nm" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/input_layout_name"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="12dp"
            android:layout_marginEnd="24dp"
            android:hint="@string/name_text"
            app:boxBackgroundColor="@android:color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/input_layout_check_pw">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/name_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:imeOptions="actionDone|flagNoExtractUi|flagNoFullscreen|flagNoAccessoryAction"
                android:inputType="textPassword"
                android:privateImeOptions="nm" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/input_layout_phone_number"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="12dp"
            android:layout_marginEnd="24dp"
            android:hint="@string/ex_user_phone_number"
            app:boxBackgroundColor="@android:color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/input_layout_name">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/phone_number_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:imeOptions="actionDone|flagNoExtractUi|flagNoFullscreen|flagNoAccessoryAction"
                android:inputType="textPassword"
                android:privateImeOptions="nm" />

        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/sign_up_button"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginTop="48dp"
            android:layout_marginBottom="12dp"
            android:background="@drawable/login_button_radius"
            android:gravity="center"
            android:text="@string/sign_up_text"
            android:textColor="@color/white"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/input_layout_phone_number"
            app:layout_constraintStart_toStartOf="@+id/input_layout_phone_number"
            app:layout_constraintTop_toBottomOf="@+id/input_layout_phone_number" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>

</layout>